--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -188,7 +188,7 @@
               <ul class="list-group list-group-horizontal-lg">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   First seen
-                  <span class="badge badge-primary badge-pill">add</span>
+                  <span class="badge badge-primary badge-pill">{{validator.slashing?.start_height}}</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   Precommits
@@ -197,15 +197,19 @@
                       <span *ngFor="let block of (appState | async).blocks.slice(0,1)">
                         {{
                           block.header?.height !== null
-                          ? block.header?.height - validator.slashing.start_height - validator.slashing.missed_blocks_counter
+                          ? block.header?.height 
+                            - validator.slashing?.start_height 
+                            - validator.slashing?.missed_blocks_counter
                           : 0
                         }}
                       </span>
                     </span>
                     <ng-template #elseCommitsBlock>
                       {{
-                        validators?.blockStamp
-                        ? validators?.blockStamp - validator.slashing.start_height - validator.slashing.missed_blocks_counter
+                        (appState | async).validators?.blockStamp
+                        ? (appState | async).validators?.blockStamp 
+                          - validator.slashing?.start_height 
+                          - validator.slashing?.missed_blocks_counter
                         : 0
                       }}
                     </ng-template>
@@ -213,7 +217,7 @@
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   Missed Blocks
-                  <span class="badge badge-primary badge-pill">add</span>
+                  <span class="badge badge-primary badge-pill">{{validator.slashing?.missed_blocks_counter}}</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   Self-bond%
