--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -38,8 +38,7 @@
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef> Status </th>
         <td mat-cell *matCellDef="let tx"> 
-          <span *ngIf="tx.details?.logs[0].success === true">Succeed</span>
-          <span *ngIf="tx.details?.logs[0].success === false">Failed</span>
+          <span>{{tx.status}}</span>
         </td>
       </ng-container>
 
