--- a/src/app/components/charts/horizontal-bar-chart/horizontal-bar-chart.component.html
+++ b/src/app/components/charts/horizontal-bar-chart/horizontal-bar-chart.component.html
@@ -1,14 +1,12 @@
-<mat-card style="max-width: 50%">
+<mat-card>
   <div style="display: block">
    <canvas mdbChart
      [chartType]="chartType"
      [datasets]="chartDatasets"
-     [labels]="chartLabels"
-     [colors]="chartColors"
      [options]="chartOptions"
-     [legend]="true"
      (chartHover)="chartHovered($event)"
-     (chartClick)="chartClicked($event)">
+     (chartClick)="chartClicked($event)"
+     [legend]="true">
    </canvas>
   </div>
 </mat-card>
