--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -207,7 +207,7 @@
     <main>
         <body>
             <app-status-bar></app-status-bar>
-            <!-- <app-test></app-test> -->
+            <app-test></app-test>
             <router-outlet></router-outlet>
             <app-scroll-top></app-scroll-top>
             <app-footer></app-footer>
