--- a/src/app/components/status-bar/status-bar.component.scss
+++ b/src/app/components/status-bar/status-bar.component.scss
@@ -46,3 +46,11 @@
 .card-text {
     margin-bottom: 0;
 }
+
+// .ng-tns-c4-5 {
+//     padding: 0;
+// }
+
+.col-12, .col-lg-3, .col-md-6, .w-25, .query-card-wrapper {
+    padding-right: 0;
+}
