--- a/src/app/components/blocks/blocks.component.scss
+++ b/src/app/components/blocks/blocks.component.scss
@@ -26,20 +26,20 @@ td {
   text-align: left;
 }
 
-thead th:nth-child(1) {
-  width: 10%;
+th:nth-child(1) {
+  width: 25%;
 }
 
-thead th:nth-child(2) {
-  width: 10%;
+th:nth-child(2) {
+  width: 25%;
 }
 
-thead th:nth-child(3) {
-  width: 40%;
+th:nth-child(3) {
+  width: 25%;
 }
 
-thead th:nth-child(4) {
-  width: 40%;
+th:nth-child(4) {
+  width: 25%;
 }
 
 tbody tr:nth-child(odd){
