--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -12,20 +12,20 @@
     </div>
   </div>
   
-  <div class="card events-card">
+  <div class="card events-card table-responsive text-nowrap scrollbar-primary">
 
     <table mat-table
           [dataSource]="dataSource" 
           multiTemplateDataRows
-          class="mat-elevation-z8">
+          class="mat-elevation-z8 w-auto">
 
-      <ng-container matColumnDef="hash">
-        <th mat-header-cell *matHeaderCellDef> Hash </th>
-        <td mat-cell *matCellDef="let tx"> {{tx.hash}} </td>
+      <ng-container matColumnDef="hash" sticky>
+        <th mat-header-cell *matHeaderCellDef class="th-lg"> Hash </th>
+        <td mat-cell *matCellDef="let tx"> {{tx.hash | slice:0:15 }}... </td>
       </ng-container>
 
       <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef> Type </th>
+        <th mat-header-cell *matHeaderCellDef class="th-lg"> Type </th>
         <td mat-cell *matCellDef="let tx">
           <mat-chip-list>
             <mat-chip color = "primary" selected>
@@ -35,14 +35,14 @@
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> Status </th>
+        <th mat-header-cell *matHeaderCellDef class="th-lg"> Status </th>
         <td mat-cell *matCellDef="let tx"> 
           <span>{{tx.status}}</span>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="fee">
-        <th mat-header-cell *matHeaderCellDef> Fee </th>
+        <th mat-header-cell *matHeaderCellDef class="th-lg"> Fee </th>
         <td mat-cell *matCellDef="let tx"> 
           {{ 
             tx.details?.tx.value.fee.amount ?
@@ -52,12 +52,12 @@
       </ng-container>
 
       <ng-container matColumnDef="height">
-        <th mat-header-cell *matHeaderCellDef> Height </th>
+        <th mat-header-cell *matHeaderCellDef class="th-lg"> Height </th>
         <td mat-cell *matCellDef="let tx"> {{tx.height}} </td>
       </ng-container>
 
       <ng-container matColumnDef="timestamp">
-        <th mat-header-cell *matHeaderCellDef> Timestamp </th>
+        <th mat-header-cell *matHeaderCellDef class="th-lg"> Timestamp </th>
         <td mat-cell *matCellDef="let tx"> to-add </td>
       </ng-container>
 
