--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -42,16 +42,16 @@
   </div> -->
   
 
-  <div class="example-container mat-elevation-z8 scrollbar-primary">
-    <table multiTemplateDataRows mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
+  <div class="example-container mat-elevation-z8 scrollbar-primary table-responsive text-nowrap">
+    <table multiTemplateDataRows mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8 w-auto">
 
-      <ng-container matColumnDef="rank" sticky>
+      <ng-container matColumnDef="rank">
         <th mat-sort-header="rank" mat-header-cell *matHeaderCellDef> Rank </th>
         <td mat-cell *matCellDef="let validator"> {{validator.rank}} </td>
       </ng-container>
   
       <ng-container  matColumnDef="moniker" sticky>
-        <th mat-sort-header="description.moniker" mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-sort-header="description.moniker" mat-header-cell *matHeaderCellDef class="th-lg"> Name </th>
         <td mat-cell *matCellDef="let validator" id="{{validator.hex_address}}"> 
           <span>
             <!-- <figure style="cursor: pointer;" (click)="openDialog(validator)" class="validator-avatar is-128x128" *ngIf="validator.keybase">
@@ -76,7 +76,7 @@
       </ng-container>
     
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> Status/Uptime </th>
+        <th mat-header-cell *matHeaderCellDef class="th-lg"> Status </th>
         <td mat-cell *matCellDef="let validator">  
           <span *ngIf="validator.jailed"><i class="ion-record jailed"></i></span>
           <span *ngIf="!validator.jailed"><i class="ion-record jailedNot"></i></span>
@@ -91,7 +91,7 @@
       </ng-container>
     
       <ng-container matColumnDef="weight">
-        <th mat-sort-header="tokens" mat-header-cell *matHeaderCellDef> Voting Weight </th>
+        <th mat-sort-header="tokens" mat-header-cell *matHeaderCellDef class="th-lg"> Voting Weight </th>
         <td mat-cell *matCellDef="let validator">
           {{validator.tokens/1e6 | number:'.0-0'}}&nbsp;<span class="table-subtitle">({{validator.tokens/(appState | async).totalStake| percent:'.2-2'}})</span>
           <!-- <br>
@@ -102,7 +102,7 @@
       
   
       <ng-container matColumnDef="assets">
-        <th mat-sort-header="account.tokens" mat-header-cell *matHeaderCellDef> Assets </th>
+        <th mat-sort-header="account.tokens" mat-header-cell *matHeaderCellDef class="th-lg"> Assets </th>
         <td mat-cell *matCellDef="let validator">
           <span *ngIf="validator.account?.tokens; else accountElseBlock" matTooltip="Balance" matTooltipPosition="above">
             {{validator.account?.tokens/1e6 | number:'.2-2'}}
@@ -122,7 +122,7 @@
       </ng-container>
   
       <ng-container matColumnDef="delegators">
-        <th mat-header-cell *matHeaderCellDef> Delegators </th>
+        <th mat-header-cell *matHeaderCellDef class="th-lg"> Delegators </th>
         <td mat-cell *matCellDef="let validator"> 
           <span *ngIf="validator.delegations; else otherBlock">
             {{validator.delegations?.length}}
@@ -134,7 +134,7 @@
       </ng-container>
   
       <ng-container matColumnDef="unbond">
-        <th  mat-header-cell *matHeaderCellDef> 
+        <th  mat-header-cell *matHeaderCellDef class="th-lg"> 
           Unbond 
         </th>
         <td  mat-cell *matCellDef="let validator">
@@ -155,7 +155,7 @@
       </ng-container>
      -->
       <ng-container matColumnDef="bond">
-        <th mat-sort-header="self_bond" mat-header-cell *matHeaderCellDef> Self-Bond </th>
+        <th mat-sort-header="self_bond" mat-header-cell *matHeaderCellDef class="th-lg"> Self-Bond </th>
         <td mat-cell *matCellDef="let validator">
           {{validator.self_bond/1e6 | number:'.0-0'}} <span class="ticker">ATOM</span>
           <!-- <br> -->
@@ -163,7 +163,7 @@
         </td>
       </ng-container>
           
-      <ng-container matColumnDef="commission" stickyEnd>
+      <ng-container matColumnDef="commission">
         <th mat-header-cell *matHeaderCellDef> Commission </th>
         <td mat-cell *matCellDef="let validator">
           <span matTooltip="Current Rate" matTooltipPosition="above">{{validator.commission?.rate | percent}}</span>
@@ -231,9 +231,6 @@
                   Rewards
                   <span class="badge badge-primary badge-pill" *ngIf="validator.outstanding_rewards">{{validator.outstanding_rewards[0].amount/1e6 | number:'.2-2'}} <span class="badge-ticker">ATOM</span></span>
                 </li>
-                <!-- <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;">
-                  <a href="{{validator.description?.website}}" target=" ">Website<span class="badge badge-primary badge-pill"><i class="fa fa-globe"></i></span></a>
-                </li> -->
                 <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;" (click)="openDialog(validator)">
                   Details
                   <span class="badge badge-primary badge-pill"><i class="fa fa-ellipsis-v"></i></span>
