--- a/src/app/components/blocks/blocks.component.scss
+++ b/src/app/components/blocks/blocks.component.scss
@@ -14,7 +14,7 @@ p {
 /*-------------------------------------------------*/
 table {
   table-layout: fixed;
-  width: 100%;
+  min-width: 100%;
   border-collapse: collapse;
   /* border: 3px solid purple; */
 }
