--- a/src/app/components/validators/validators.component.scss
+++ b/src/app/components/validators/validators.component.scss
@@ -254,3 +254,12 @@ i {
   margin-top: 3px;
   margin-left: 3px;
 }
+
+.dropdown-toggle {
+  color: white;
+  background-color: #3F51B5;
+}
+
+.dropdown-menu {
+  background-color: #3F51B5;
+}
