popover for txs. Other minor UI tweaks.

--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -149,9 +149,10 @@
           <div class="breadcrumbs breadcrumbs-hidden-nav breadcrumb-dn mr-auto">
             <a href="#"><h1 class="brand-nav">Coris</h1></a>
             <mat-chip-list class="alpha-chip">
-                <mat-chip color = "accent">
+                <!-- <mat-chip color = "accent">
                   alpha
-                </mat-chip>
+                </mat-chip> -->
+                <mdb-badge color="indigo">alpha</mdb-badge>
             </mat-chip-list>
           </div>
           
