--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -18,7 +18,9 @@
 
     <ng-container matColumnDef="hash" sticky>
       <th mat-header-cell *matHeaderCellDef class="th-lg"> Hash </th>
-      <td mat-cell *matCellDef="let tx"> {{tx.hash | slice:0:15 }}... </td>
+      <td mat-cell *matCellDef="let tx" mdbPopover="{{tx.hash}}"
+      placement="top"
+      triggers="focus" mdbWavesEffect> {{tx.hash | slice:0:15 }}... </td>
     </ng-container>
 
     <ng-container matColumnDef="type">
