--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -19,7 +19,7 @@
     Bonded BondStatus = 0x02 
   -->
   <div class="dropdown" mdbDropdown>
-    <button mdbDropdownToggle type="button" mdbBtn  class="dropdown-toggle waves-light" size="sm"
+    <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle waves-light" size="sm"
       mdbWavesEffect>
       Status
     </button>
