--- a/src/app/components/validators/validators.component.scss
+++ b/src/app/components/validators/validators.component.scss
@@ -119,7 +119,7 @@ tbody {
 }
 
 .mat-header-row {
-  background-color: #111923;
+  background-color: #3F51B5;
 }
 
 .ticker {
@@ -230,7 +230,8 @@ i {
 
 .dropdown-toggle {
   color: white;
-  background-color: #3F51B5;
+  // background-color: #FFC107;
+  margin-left: 0;
 }
 
 .dropdown-menu {
