--- a/src/app/components/blocks/blocks.component.scss
+++ b/src/app/components/blocks/blocks.component.scss
@@ -103,7 +103,21 @@ tbody {
 .mat-header-row {
   background-color: #3F51B5;
 }
+
 .mat-form-field {
   font-size: 14px;
   width: 100%;
 }
+
+.paginator {
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  float: right;
+  margin-right: 0;
+ }
+
+ .mat-paginator {
+  color:white;
+  background-color: #3F51B5;
+ }
