--- a/src/app/components/txs/txs.component.scss
+++ b/src/app/components/txs/txs.component.scss
@@ -121,3 +121,16 @@ tr.tx-detail-row {
   font-size: 14px;
   width: 100%;
 }
+
+.paginator {
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  float: right;
+  margin-right: 0;
+ }
+
+ .mat-paginator {
+  color:white;
+  background-color: #3F51B5;
+ }
