WiP: Added few status-bar queries

--- a/src/app/components/status-bar/carousel/carousel.component.html
+++ b/src/app/components/status-bar/carousel/carousel.component.html
@@ -15,7 +15,7 @@
             <!--Card content-->
             <mdb-card-text>
                 <br>
-                {{card.description}}
+                Updated at {{card.timestamp}}
             </mdb-card-text>
             </mdb-card-body>
             <!--/.Card content-->
