status bond status fix. minor tweaks.

--- a/src/app/components/status-bar/carousel/carousel.component.scss
+++ b/src/app/components/status-bar/carousel/carousel.component.scss
@@ -24,3 +24,7 @@
 .col-12, .col-lg-3, .col-md-6, .w-25, .query-card-wrapper {
     padding-right: 0;
 }
+
+.carousel-item {
+    max-height: 263px;
+}
