--- a/src/app/components/validator-profile/profile-card/profile-card.component.scss
+++ b/src/app/components/validator-profile/profile-card/profile-card.component.scss
@@ -1,8 +1,11 @@
-.profile-card-row {
-    max-width: 50%;
+.testimonial-card {
+    max-width: 100%;
 }
 
-// .testimonial-card {
-//     height: 70%;
-//     width: auto;
+.card-title h1 {
+    color: #4a4a4a;
+}
+
+// .row {
+//     max-width: 50%;
 // }
